--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -7,7 +7,7 @@
 
     <body> 
         <h1>White Chocolate Macadamia Nut Cookies</h1>
-        <img src="/home/moody/repos/odin-recipes/images/Cookie.jpeg">
+        <img src="images/Cookie.jpeg">
         <h3>Description</h3>
         <p>The best type of cookie and it is NOT up for debate! Soft cookie dough mixed with delicious white chocolate and macadamia nuts.</p>
         <h3>Ingredients</h3>
