--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,7 +7,7 @@
 
     <body> 
         <h1>Chicken Garlic Pizza Recipe</h1>
-        <img src="/home/moody/repos/odin-recipes/images/CGP.jpeg">
+        <img src="images/CGP.jpeg">
         <h3>Description</h3>
         <p>A delicious option for homemade pizza! Butter garlic sauce, chicken, tomato, and ricotta and parmesan cheeses are baked together for a delightfully light pizza.</p>
         <h3>Ingredients</h3>
