Add necessary files for recipe website

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -7,7 +7,7 @@
 
     <body> 
         <h1>Best Burger Ever Recipe</h1>
-        <img src="images/Burger.jpeg">
+        <img src="../images/Burger.jpeg">
         <h3>Description</h3>
         <p>A very healthy AND falvorful burger with a little extra crunch</p>
         <h3>Ingredients</h3>
