--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -7,7 +7,7 @@
 
     <body> 
         <h1>White Chocolate Macadamia Nut Cookies</h1>
-        <img src="images/Cookie.jpeg">
+        <img src="../images/Cookie.jpeg">
         <h3>Description</h3>
         <p>The best type of cookie and it is NOT up for debate! Soft cookie dough mixed with delicious white chocolate and macadamia nuts.</p>
         <h3>Ingredients</h3>
@@ -30,7 +30,7 @@
             <li>Cream butter, brown sugar, and white sugar together in a large bowl until smooth. Beat in eggs one at a time, then stir in vanilla and almond extracts.</li>
             <li>Combine flour, baking soda, and salt in another bowl. Gradually stir the dry ingredients into the butter mixture. Fold in macdamia nuts and white chocolate.</li>
             <li>Drop dough by teaspoonfuls onto ungreased cookie sheets</li>
-            <li>Bake in the preheated oven until golden brown, about 10 minutes.</li>
+            <li>Bake in the preheated oven until golden brown, about 10</li>
         </ol>
     </body>
 </html>
