Add necessary files and roots for recipe website as well as make it

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="./recipes/pizza.html">Chicken Garlic Pizza Recipe</a></li>
-            <li><a href="./recipes/burger.html">Best Burger Ever Recipe</a></li>
-            <li><a href="./recipes/cookies.html">White Chocolate Macadamia Nut Cookies Recipe</a></li>
+            <li><a href="./recipes/pizza/pizza.html">Chicken Garlic Pizza Recipe</a></li>
+            <li><a href="./recipes/burger/burger.html">Best Burger Ever Recipe</a></li>
+            <li><a href="./recipes/cookie/cookies.html">White Chocolate Macadamia Nut Cookies Recipe</a></li>
         </ul>
     </body>
 </html>
